# hybridcvrp

./: .gitignore  Cargo.toml  HGSRR-DIMACS.sh  LICENSE  README.md  config.yml  global.css  index.html  make_wasm.sh  worker.js
benches/: performance.rs
instances/: Ghent1.vrp  Leuven1.vrp
src/: cli.rs  config.rs  constants.rs  lib.rs  main.rs
src/models/: circle_sector.rs  matrix.rs  mod.rs  primitives.rs  problem.rs
src/solver/: context.rs  evaluate.rs  history.rs  mod.rs  solver.rs
src/solver/genetic/: decomposition.rs  genetic.rs  individual.rs  mod.rs  population.rs  split.rs
src/solver/improvement/: linked_list.rs  local_search.rs  localsearch.rs  mod.rs  preprocess.rs
src/solver/improvement/moves/: mod.rs  relocation.rs  swap.rs  swap_star.rs  two_opt.rs
src/solver/improvement/ruin_recreate/: mod.rs  node.rs  recreate.rs  ruin.rs  schedule.rs
src/utils/: comparison.rs  json.rs  mod.rs  parser.rs  random.rs  serializer.rs
src/wasm/: mod.rs
