[package]
name = "hybridcvrp"
version = "0.1.0"
authors = ["martsime <martsime@users.noreply.github.com>"]
edition = "2018"

[features]
default = []

unsafe-speedup = []

[dependencies]
ahash = "0.7.2"
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
env_logger = "0.8.3"
fastrand = "1.4.0"
float-cmp = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.119", features = ["derive", "rc"] }
serde_yaml = "0.8.15"

[profile.release]
debug = true