[package]
name = "hybridcvrp"
version = "0.1.0"
authors = ["martsime <martsime@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

unsafe-speedup = []
wasm = ["wasm-bindgen", "console_error_panic_hook", "js-sys"]

[dependencies]
ahash = "0.7.2"
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
env_logger = "0.8.3"
fastrand = "1.4.0"
float-cmp = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.119", features = ["derive", "rc"] }
serde_yaml = "0.8.15"
instant = { version = "0.1.10", features = ["wasm-bindgen"] } 

# WASM dependencies
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"], optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = { version = "0.3.53", optional = true }

[profile.release]
lto = true
